chore(react-instantsearch): move to react-instantsearch repo

--- a/docgen/src/examples/e-commerce-infinite/index.html
+++ b/docgen/src/examples/e-commerce-infinite/index.html
@@ -3,7 +3,7 @@ title: E-commerce with infinite hits
 layout: example.pug
 name: e-commerce-infinite
 category: examples
-source: https://github.com/algolia/instantsearch.js/tree/v2/docgen/src/examples/e-commerce-infinite
+source: https://github.com/algolia/react-instantsearch/tree/master/docgen/src/examples/e-commerce-infinite
 navWeight: 1
 stylesheets:
   - https://cdn.jsdelivr.net/bootstrap/3.3.5/css/bootstrap.min.css
