--- a/docgen/src/examples/default-theme/index.html
+++ b/docgen/src/examples/default-theme/index.html
@@ -3,7 +3,7 @@ title: Default theme
 layout: example.pug
 name: default-theme
 category: examples
-source: https://github.com/algolia/instantsearch.js/tree/v2/docgen/src/examples/default-theme
+source: https://github.com/algolia/react-instantsearch/tree/master/docgen/src/examples/default-theme
 navWeight: 1
 ---
 <div id="app"></div>
