--- a/docgen/src/examples/e-commerce/index.html
+++ b/docgen/src/examples/e-commerce/index.html
@@ -3,7 +3,7 @@ title: E-commerce
 layout: example.pug
 name: e-commerce
 category: examples
-source: https://github.com/algolia/instantsearch.js/tree/v2/docgen/src/examples/e-commerce
+source: https://github.com/algolia/react-instantsearch/tree/master/docgen/src/examples/e-commerce
 navWeight: 1
 stylesheets:
   - https://cdn.jsdelivr.net/bootstrap/3.3.5/css/bootstrap.min.css
