--- a/docgen/src/examples/material-ui/index.html
+++ b/docgen/src/examples/material-ui/index.html
@@ -3,7 +3,7 @@ title: Material-UI
 layout: example.pug
 name: material-ui
 category: examples
-source: https://github.com/algolia/instantsearch.js/tree/v2/docgen/src/examples/material-ui
+source: https://github.com/algolia/react-instantsearch/tree/master/docgen/src/examples/material-ui
 navWeight: 1
 stylesheets:
   - https://fonts.googleapis.com/icon?family=Material+Icons
