--- a/docgen/src/examples/media/index.html
+++ b/docgen/src/examples/media/index.html
@@ -3,7 +3,7 @@ title: Media
 layout: example.pug
 name: media
 category: examples
-source: https://github.com/algolia/instantsearch.js/tree/v2/docgen/src/examples/media
+source: https://github.com/algolia/react-instantsearch/tree/master/docgen/src/examples/media
 navWeight: 1
 stylesheets:
   - https://cdn.jsdelivr.net/bootstrap/3.3.5/css/bootstrap.min.css
