--- a/docgen/src/examples/tourism/index.html
+++ b/docgen/src/examples/tourism/index.html
@@ -3,7 +3,7 @@ title: Tourism
 layout: example.pug
 name: tourism
 category: examples
-source: https://github.com/algolia/instantsearch.js/tree/v2/docgen/src/examples/tourism
+source: https://github.com/algolia/react-instantsearch/tree/master/docgen/src/examples/tourism
 navWeight: 1
 stylesheets:
   - https://cdn.jsdelivr.net/bootstrap/3.3.5/css/bootstrap.min.css
