--- a/packages/react-instantsearch/examples/autocomplete/public/index.html
+++ b/packages/react-instantsearch/examples/autocomplete/public/index.html
@@ -11,6 +11,8 @@
 <body>
   <h2>Autocomplete targetting multiple indices</h2>
   <div id="autocomplete-with-multi-indices"></div>
+  <h2>Autocomplete of mentions</h2>
+  <div id="autocomplete-mentions"></div>
 </body>
 
 </html>
